--- a/portfolio/src/assets/json/projects.json
+++ b/portfolio/src/assets/json/projects.json
@@ -1,46 +1,46 @@
 [
     {
-        "name": "Soduko",
+        "name": "Ft_transcendence",
         "stack": {
             "name": "Angular",
             "iconClasses": "fab fa-angular"
         },
-        "description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.",
-        "sourceUrl": "https://github.com",
-        "previewUrl": "https://github.com",
+        "description": "ft_transcendence is the ultimate project in the 42 common core curriculum, challenging students to create a feature-rich web application centered around the classic game Pong. This project combines various modern web technologies to create a complete multiplayer gaming experience with social features.",
+        "sourceUrl": "https://github.com/Sboulal/ft_transcandence",
+        "previewUrl": "https://github.com/Sboulal/ft_transcandence",
         "featured": true
     },
     {
-        "name": "E-commerce Store",
+        "name": "IRC",
         "stack": {
             "name": "React",
             "iconClasses": "fab fa-react"
         },
-        "description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.",
-        "sourceUrl": "https://github.com",
-        "previewUrl": "https://github.com",
+        "description": "ft_irc 💬 *A minimalist IRC server in C++ (RFC 2812 compliant)* Core Features: ✅ Multi-client chat with poll() ✅ Channel modes (+i +t +k) ✅ Password authentication DCC file transfer (bonus)",
+        "sourceUrl": "https://github.com/Nkhou/ft_irc",
+        "previewUrl": "https://github.com/Nkhou/ft_irc",
         "featured": true
     },
     {
-        "name": "Algorithm Visualization App",
+        "name": "Inception",
         "stack": {
             "name": "Angular",
             "iconClasses": "fab fa-angular"
         },
-        "description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.",
-        "sourceUrl": "https://github.com",
-        "previewUrl": "https://github.com",
+        "description": "Inception is a project aimed at introducing students to the concepts of system containerization and orchestration using **Docker**. The objective is to create a secure and efficient multi-container environment that mimics a small-scale web hosting setup.",
+        "sourceUrl": "https://github.com/Sboulal/inception",
+        "previewUrl": "https://github.com/Sboulal/inception",
         "featured": true
     },
     {
-        "name": "Time Tracking CLI App",
+        "name": "Cub3d",
         "stack": {
             "name": "Node.js",
             "iconClasses": "fab fa-node-js"
         },
-        "description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.",
-        "sourceUrl": "https://github.com",
-        "previewUrl": "https://github.com",
+        "description": "Cub3D is a simple 3D game engine project built in C using raycasting, inspired by the classic game Wolfenstein 3D💪🔫🔫💥.",
+        "sourceUrl": "https://github.com/Nkhou/cub3D",
+        "previewUrl": "https://github.com/Nkhou/cub3D",
         "featured": true
     }
 ]
