--- a/portfolio/vercel.json
+++ b/portfolio/vercel.json
@@ -1,8 +1,10 @@
 {
     "buildCommand": "npm run build",
-    "outputDirectory": "build",
-    "framework": "create-react-app"
-}
-
-
-  
+    "outputDirectory": "dist/portfolio",
+    "rewrites": [
+      {
+        "source": "/(.*)",
+        "destination": "/index.html"
+      }
+    ]
+  }
